@@ -1,3 +1,6 @@
+21 March 2014: Wouter
+	- Fix bug in nodatabase mode with ixfrs that change nsec3param.
+
 19 March 2014: Wouter
 	- made database: "" set the 3600 default for zonefileswrite only
 	  if it is also at its default, so that user settings override.
